# SensorMaster

./: .directory  .gitignore  CMakeLists.txt  ProcArgs.c  ProcArgs.h  README.md  main.c  meas.txt  ntc_conf.txt  send  sensormaster.c  testrun
